--- a/Health/app/src/main/res/layout/fragment_food_menu_first_item.xml
+++ b/Health/app/src/main/res/layout/fragment_food_menu_first_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,6 +18,7 @@
         android:id="@+id/rv_infoCaloriesPFC_fmfi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="5dp"
+        tools:listitem="@layout/item_food_menu_for_day"/>
 
 </LinearLayout>
