--- a/Health/app/src/main/res/layout/activity_registration.xml
+++ b/Health/app/src/main/res/layout/activity_registration.xml
@@ -279,6 +279,22 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_privacyPolicy"
+            android:onClick="onClickPrivacyPolicy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:padding="6dp"
+            android:text="@string/privacyPolicy"
+            android:textSize="14sp"
+            android:textColor="@color/blueDarkDark"
+            android:background="@drawable/background_edit_text_registration"
+            />
+
         <Button
             android:id="@+id/signUpReg"
             android:onClick="onClickSignUpReg"
