--- a/Health/app/src/main/res/layout/activity_image_selection.xml
+++ b/Health/app/src/main/res/layout/activity_image_selection.xml
@@ -42,6 +42,7 @@
         android:layout_margin="10dp">
 
         <Button
+            android:id="@+id/btn_openGallery"
             android:onClick="onClickOpenGallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
